@@ -12,5 +12,6 @@ size_t fread_swap8(void *ptr, size_t size, size_t nitems, FILE *stream);
 size_t fread_fortran(void *ptr, size_t size, size_t nitems, FILE *stream, int swap);
 size_t fwrite_fortran(void *ptr, size_t size, size_t nitems, FILE *stream);
 void skip_fortran(FILE *stream, int swap);
-
+void particle_range(int64_t total_p, int64_t block, int64_t num_blocks,
+		    int64_t *p_start, int64_t *to_read);
 #endif /* _IO_UTIL_H_ */
