@@ -5,6 +5,7 @@ v0.99.9-RC4:
 *) Added experimental capability to dump backtraces on network errors.  (Uncomment BACKTRACE_NETWORK_ERRORS in inet/socket.h to enable).
 *) Increased retry attempts for network connection failures.  (Thanks to Julian Onions for finding the problem, as well as contributing the code and solution).
 *) Sign error for the Hubble term in kinetic energy calculations now fixed (thanks to Alex Ji for finding).  This has almost no effect on halo catalogs because the Hubble term is extremely subdominant on halo scales.
+*) Infinite loop fixed in full particle outputs.  Thanks to Lauren Anderson for finding.
 
 v0.99.9-RC3 (5/13/14):
 *) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
